--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "Example project from an angular.io guide.",
   "scripts": {
     "lint": "tslint ./src/**/*.ts -t verbose",
+    "restart": "pm2 startOrRestart ecosystem.config.js",
+    "deploy": "pm2 deploy ecosystem.config.js production",
     "start": "ng serve",
     "test": "ng test",
     "build": "ng build --prod",
@@ -47,6 +49,7 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lodash": "^4.16.2",
+    "pm2": "^3.5.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
