--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@angular/upgrade": "^7.1.0",
     "angular-in-memory-web-api": "github:brandonroberts/in-memory-web-api-bazel#50a34d8",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "rxjs": "^6.3.0",
+    "save": "^2.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
