--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "restart": "pm2 startOrRestart ecosystem.config.js",
     "deploy": "pm2 deploy ecosystem.config.js production",
     "start": "ng serve",
+    "server": "node_modules/.bin/nodemon server.js",
     "test": "ng test",
     "build": "ng build --prod",
     "e2e": "ng e2e",
@@ -42,7 +43,6 @@
     "@angular/platform-server": "^7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.4",
-    "@types/node": "~8.9.4",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -51,6 +51,7 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lodash": "^4.16.2",
+    "nodemon": "^1.18.11",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
